Fix hide/show social media icons on mobile

--- a/article-preview-component/styles.css
+++ b/article-preview-component/styles.css
@@ -102,7 +102,7 @@ button {
 }
 
 #share-container {
-  display: none;
+  display: flex;
   align-items: center;
   padding-left: 40px;
   padding-right: 40px;
@@ -113,13 +113,15 @@ button {
   min-width: 20px;
 }
 
-#share-container > img {
+#share-container img {
   max-width: 30px;
   /* ensures responsive icons */
   width: 100%;
   height: auto;
   margin: 1em;
 }
+
+/* ====== Media Queries ====== */
 
 @media screen and (min-width: 600px) {
   .card {
@@ -136,5 +138,42 @@ button {
 
   .text {
     font-size: 1.2em;
+  }
+
+  /* ====== Styling for popup with social media icons ====== */
+  /* Popup container */
+  #share-container {
+    display: none;
+    position: relative;
+    z-index: 1;
+    right: 0;
+  }
+
+  /* actual popup */
+  #share-container .share-content {
+    width: 160px;
+  }
+
+  #share-container .share-content::after {
+    content: "";
+    transform: rotate(45deg);
+    top: 50px;
+    width: 0;
+    height: 0;
+    left: 50%;
+    margin-left: -10px;
+    margin-top: -15px;
+    position: absolute;
+  }
+
+  #share-container img {
+    width: 10px;
+    /* ensures responsive icons */
+    height: 10px;
+    margin: 1em;
+  }
+
+  #share-container .show {
+    visibility: visible;
   }
 }
